@@ -1,7 +1,7 @@
 #include "chashtable.h"
 #include "str.h"
 
-int cht_adds(struct hashtable *ch, const void *key, const void *dat)
+int cht_adds(struct chashtable *ch, const void *key, const void *dat)
 {
   return cht_addb(ch, key, str_len(key), dat, str_len(dat));
 }
