@@ -1,4 +1,3 @@
-
 -g -W -Wall -pedantic -Wno-long-long
 -g -W -Wall -pedantic -ansi -Wno-long-long
 
