@@ -3,6 +3,8 @@
 
 #define HT_HASH_BUCKETS 2048UL
 
+typedef int (ht_callback)(void *, unsigned long, void *);
+
 struct ht_table_node {
   struct ht_table_node *next;
   void *key;
@@ -21,13 +23,7 @@ struct hashtable {
   struct ht_table_head slots[HT_HASH_BUCKETS];
 };
 
-void ht_init(struct hashtable *);
-void ht_free(struct hashtable *);
-void ht_free_ext(struct hashtable *, void (*)(void *));
-
-void ht_clear(struct hashtable *);
-void ht_clear_ext(struct hashtable *, void (*)(void *));
-
+int ht_init(struct hashtable *);
 int ht_addb(struct hashtable *, const void *, unsigned long, const void *, unsigned long);
 int ht_adds(struct hashtable *, const void *, const void *);
 int ht_getb(const struct hashtable *, const void *, unsigned long, void **, unsigned long *);
@@ -36,8 +32,18 @@ int ht_deleteb(struct hashtable *, const void *, unsigned long);
 int ht_deletes(struct hashtable *, const void *);
 int ht_replaceb(struct hashtable *, const void *, unsigned long, const void *, unsigned long);
 int ht_replaces(struct hashtable *, const void *, const void *);
+int ht_replaceb_ext(struct hashtable *, const void *, unsigned long, const void *, unsigned long, ht_callback *, void *);
+int ht_replaces_ext(struct hashtable *, const void *, const void *, ht_callback *, void *);
+int ht_checkb(const struct hashtable *, const void *, unsigned long);
+int ht_checks(const struct hashtable *, const void *);
 
-unsigned long ht_hash(const char *, unsigned long);
+void ht_iter(struct hashtable *, ht_callback *, void *);
+void ht_free(struct hashtable *);
+void ht_free_ext(struct hashtable *, ht_callback *, void *);
+void ht_clear(struct hashtable *);
+void ht_clear_ext(struct hashtable *, ht_callback *, void *);
+
+unsigned long ht_hash(const void *, unsigned long);
 unsigned long ht_bytes(const struct hashtable *);
 
 #endif
