@@ -2,7 +2,7 @@
 #include "str.h"
 
 int ht_gets(const struct hashtable *h, const void *k,
-            void **dat, unsigned long *len)
+                                             void **data, unsigned long *len)
 {
-  return ht_getb(h, k, str_len((const char *) k), dat, len);
+  return ht_getb(h, k, str_len((const char *) k), data, len);
 }
