@@ -1,13 +1,14 @@
 #include "hashtable.h"
 
-unsigned long ht_hash(const char *x, unsigned long len)
+unsigned long ht_hash(const void *x, unsigned long len)
 {
+  const char *xc = x;
   unsigned long h = 5381;
   unsigned long c;
   while (len) {
-    c = *x;
+    c = *xc;
     h = ((h << 5) + h) ^ c;
-    --len; ++x;
+    --len; ++xc;
   }
   return h;
 }
